fix: remove sendData (closes app but loses data), always show copy screen

--- a/index.html
+++ b/index.html
@@ -179,31 +179,9 @@ function approve() {
   const total = approved.reduce((s,it) => s + it.p * it.q, 0);
   const code = 'GA:' + approved.map(a => a.q===1 ? a.i : a.i+'x'+a.q).join(',') + '=$' + total.toFixed(2);
 
-  // Try sendData first — if it works, webapp closes instantly
-  const debug = [];
-  debug.push('tg=' + !!tg);
-  debug.push('initData=' + !!(tg && tg.initData));
-  debug.push('initData.len=' + (tg?.initData?.length || 0));
-  debug.push('platform=' + (tg?.platform || 'none'));
-  debug.push('version=' + (tg?.version || 'none'));
-
-  if (tg && tg.initData) {
-    try {
-      debug.push('calling sendData...');
-      tg.sendData(code);
-      debug.push('sendData returned (app should close)');
-      // If still here after 1s, sendData didn't close the app → fallback
-      setTimeout(() => showCopyScreen(code, debug.join('\n')), 1000);
-      return;
-    } catch(e) {
-      debug.push('sendData ERROR: ' + e.message);
-    }
-  } else {
-    debug.push('skipped sendData (no initData)');
-  }
-
-  // Fallback: copy screen
-  showCopyScreen(code, debug.join('\n'));
+  // sendData closes the app but loses data for inline buttons — skip it
+  // Go straight to copy screen
+  showCopyScreen(code);
 }
 
 function showCopyScreen(code, debugInfo) {
