debug: add version label v8, cache bust

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ body {
 <!-- Pre-rendered copy screen -->
 <div id="copyScreen">
   <h2>✅ Order ready!</h2>
+  <div style="font-size:0.65em;color:var(--tg-theme-hint-color,#999);">v8</div>
   <p class="hint">Copy this code and paste it in the chat:</p>
   <textarea id="codeBox" readonly rows="3"></textarea>
   <button class="btn-copy" onclick="copyCode()">📋 Copy Code</button>
