--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ body {
 <!-- Pre-rendered copy screen -->
 <div id="copyScreen">
   <h2>✅ Order ready!</h2>
-  <div style="font-size:0.65em;color:var(--tg-theme-hint-color,#999);">v10</div>
+  <!-- -->
   <p class="hint">Copy this code and paste it in the chat:</p>
   <textarea id="codeBox" readonly rows="3"></textarea>
   <button class="btn-copy" onclick="copyCode()">📋 Copy Code</button>
@@ -180,44 +180,12 @@ function approve() {
   const total = approved.reduce((s,it) => s + it.p * it.q, 0);
   const code = 'GA:' + approved.map(a => a.q===1 ? a.i : a.i+'x'+a.q).join(',') + '=$' + total.toFixed(2);
 
-  // Detect launch context
-  const isInline = !!(tg?.initDataUnsafe?.query_id);
-  const hasInit = !!(tg?.initData);
-  const debug = [
-    'tg=' + !!tg,
-    'initData=' + hasInit,
-    'initData.len=' + (tg?.initData?.length || 0),
-    'query_id=' + (tg?.initDataUnsafe?.query_id || 'none'),
-    'platform=' + (tg?.platform || 'none'),
-    'version=' + (tg?.version || 'none'),
-    'isInline=' + isInline
-  ];
-
-  // Keyboard button → sendData works
-  if (hasInit && !isInline) {
-    debug.push('MODE: keyboard → sendData');
-    try {
-      tg.sendData(code);
-      return; // app closes
-    } catch(e) {
-      debug.push('sendData ERROR: ' + e.message);
-    }
-  } else {
-    debug.push('MODE: inline/browser → copy screen');
-  }
-
-  showCopyScreen(code, debug.join('\n'));
+  showCopyScreen(code);
 }
 
-function showCopyScreen(code, debugInfo) {
+function showCopyScreen(code) {
   document.getElementById('codeBox').value = code;
   document.getElementById('copyScreen').classList.add('show');
-  if (debugInfo) {
-    document.getElementById('copyStatus').innerHTML =
-      '<pre style="text-align:left;font-size:0.7em;background:var(--tg-theme-secondary-bg-color,#f5f5f5);'
-      + 'padding:8px;border-radius:6px;overflow-x:auto;white-space:pre-wrap;margin-top:8px;">'
-      + debugInfo + '</pre>';
-  }
   setTimeout(() => { const b = document.getElementById('codeBox'); b.focus(); b.select(); }, 200);
 }
 
